--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Guru Prakash Davala Portfolio</title>
+  <title>Guru Prakash D</title>
   <base href="https://guruprakashdavala.github.io/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="icon" type="image/x-icon" href="assets/images/favicon.png">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
   <!-- <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"> -->
   <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500&display=swap" rel="stylesheet">
@@ -14,8 +14,8 @@
   <!-- <link href="../src/assets/fontawesome-free/css/all.min.css" rel="stylesheet"> -->
   <!-- <script src="https://use.fontawesome.com/873d0c3439.js"></script> -->
 
-<link rel="stylesheet" href="styles.cf13f3a16c15b85a4f01.css"></head>
+<link rel="stylesheet" href="styles.38c0cf4d97ad977d5b06.css"></head>
 <body>
   <app-root></app-root>
-<script src="runtime-es2015.c5fa8325f89fc516600b.js" type="module"></script><script src="runtime-es5.c5fa8325f89fc516600b.js" nomodule defer></script><script src="polyfills-es5.3e8196928d184a6e5319.js" nomodule defer></script><script src="polyfills-es2015.5b10b8fd823b6392f1fd.js" type="module"></script><script src="main-es2015.c9959c3955b479ed7221.js" type="module"></script><script src="main-es5.c9959c3955b479ed7221.js" nomodule defer></script></body>
+<script src="runtime-es2015.c5fa8325f89fc516600b.js" type="module"></script><script src="runtime-es5.c5fa8325f89fc516600b.js" nomodule defer></script><script src="polyfills-es5.3e8196928d184a6e5319.js" nomodule defer></script><script src="polyfills-es2015.5b10b8fd823b6392f1fd.js" type="module"></script><script src="main-es2015.11ee3c2c8071795ec384.js" type="module"></script><script src="main-es5.11ee3c2c8071795ec384.js" nomodule defer></script></body>
 </html>
